--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                         <div id="days-1-4" class="tab-content active">
                             <ul class="location-info-list">
                                 <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Gikoroso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
+                                <li><strong>Date:</strong>Sep 21 - Sep 24</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                                 <li><strong>Access:</strong>  <span class="location-highlight">Prince House</span>, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  <span class="location-highlight">Sawaciti Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                             </ul>
@@ -203,6 +204,7 @@
                         <div id="days-5-7" class="tab-content">
                             <ul class="location-info-list">
                                 <li><strong>Zones:</strong> <span class="location-highlight">Wood Land Supermarket</span> - Nyarutarama | <span class="location-highlight">Pele Stadium</span> - Nyamirambo & Expo Zone at <span class="location-highlight">KCC</span></li>
+                                <li><strong>Date:</strong>Sep 25 - Sep 28</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                                 <li><strong>Access:</strong> <span class="location-highlight">Wood Land Supermarket</span>, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave | <span class="location-highlight">Pele Stadium</span>, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                             </ul>
@@ -243,6 +245,7 @@
                 <div id="loc-days-1-4" class="tab-content active">
                     <ul class="location-info-list">
                         <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Gikoroso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
+                        <li><strong>Date:</strong>Sep 21 - Sep 24</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                         <li><strong>Access:</strong> <span class="location-highlight">Prince House</span>, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St | <span class="location-highlight">Sawacity Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                     </ul>
@@ -258,6 +261,7 @@
                 <div id="loc-days-5-7" class="tab-content">
                     <ul class="location-info-list">
                         <li><strong>Zones:</strong> <span class="location-highlight">Wood Land Supermarket</span> - Nyarutarama | <span class="location-highlight">Pele Stadium</span> - Nyamirambo & Expo Zone at <span class="location-highlight">KCC</span></li>
+                        <li><strong>Date:</strong>Sep 25 - Sep 28</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                         <li><strong>Access:</strong><span class="location-highlight">Wood Land Supermarket</span>, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave | <span class="location-highlight">Pele Stadium</span>, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                     </ul>
