--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Gikoroso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
+                                <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Giporoso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
                                 <li><strong>Date:</strong>Sep 21 - Sep 24</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong>  <span class="location-highlight">Prince House</span>, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  <span class="location-highlight">Sawaciti Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
+                                <li><strong>Access:</strong>  <span class="location-highlight">Prince House</span>, Giporoso, Cross Roads of KN 5 Rd - KK 190 St |  <span class="location-highlight">Sawaciti Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
@@ -244,10 +244,10 @@
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Gikoroso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
+                        <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Giporoso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
                         <li><strong>Date:</strong>Sep 21 - Sep 24</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong> <span class="location-highlight">Prince House</span>, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St | <span class="location-highlight">Sawacity Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
+                        <li><strong>Access:</strong> <span class="location-highlight">Prince House</span>, Giporoso, Cross Roads of KN 5 Rd - KK 190 St | <span class="location-highlight">Sawacity Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
                         <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
@@ -282,5 +282,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 <script src="home.js"></script>
+<script defer data-domain="uci-event.vercel.app" src="https://plausible.io/js/script.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
 </body>
 </html>
