--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
 </header>
 
 <main>
-    <section id="hero" class="hero-section">
-    </section>
+   <section id="hero" class="hero-section">
+    <video autoplay muted loop playsinline class="hero-video">
+        <source src="brali.mp4" type="video/mp4">
+        <!-- <source src="path/to/your-video.webm" type="video/webm"> -->
+    </video>
+</section>
 
     <!-- Discover Section -->
     <section id="discover">
