--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <main>
    <section id="hero" class="hero-section">
     <video autoplay muted loop playsinline class="hero-video">
-        <source src="brali.mp4" type="video/mp4">
+        <source src="Brali.mp4" type="video/mp4">
         <!-- <source src="path/to/your-video.webm" type="video/webm"> -->
     </video>
 </section>
